<resources>
    <string name="app_name">Yodiwo Hub</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pairing">PairingActivity</string>
    <string name="action_repairing">Pairing</string>


    <!-- UI Settings  -->
    <string name="main_label">Android Node</string>

    <string name="pref_device_name_key">device_name</string>
    <string name="pref_device_name_default">Android</string>

    <string name="pref_device_comm_chan_key">comm_chan</string>
    <string name="pref_device_comm_chan_default">mqtt</string>
    <string-array name="pref_device_comm_chan_entries">
        <item>Rest</item>
        <item>MQTT</item>
    </string-array>
    <string-array name="pref_device_comm_chan_values">
        <item>rest</item>
        <item>mqtt</item>
    </string-array>

    <!-- Rest Settings  -->
    <string name="pref_server_address_key">server_address</string>
    <string name="pref_server_address_default">cyan.yodiwo.com</string>

    <string name="pref_server_use_ssl_key">server_use_ssl</string>
    <string name="pref_server_use_ssl_default">true</string>

    <string name="pref_server_port_key">server_port</string>
    <string name="pref_server_port_default">443</string>

    <string name="title_activity_pairing_web">PairingWebActivity</string>


    <!-- MQTT Settings -->
    <string name="pref_mqtt_address_key">mqtt_address</string>
    <string name="pref_mqtt_address_default">api.yodiwo.com</string>

    <string name="pref_mqtt_port_key">mqtt_port</string>
    <string name="pref_mqtt_port_default">1883</string>

    <string name="pref_mqtt_use_ssl_key">mqtt_use_ssl</string>
    <string name="pref_mqtt_use_ssl_default">false</string>

    <!-- Pairing Settings  -->
    <string name="pref_pairing_uuid_key">pairing_uuid</string>
    <string name="pref_pairing_nodekey_key">pairing_node_key</string>
    <string name="pref_pairing_nodesecret_key">pairing_node_secret</string>
    <string name="pref_pairing_token1_key">pairing_token1_key</string>
    <string name="pref_pairing_token2_key">pairing_token2_key</string>

    <!-- Thing Settings -->
    <string name="pref_things_uuid_key">things_uuid</string>


    <!-- Service Settings  -->
    <string name="pref_service_brightness_key">service_brightness</string>
    <string name="pref_service_brightness_default">true</string>
    <string name="pref_service_accelerometer_key">service_accelerometer</string>
    <string name="pref_service_accelerometer_default">true</string>
    <string name="pref_service_location_key">service_location</string>
    <string name="pref_service_location_default">false</string>
    <string name="pref_service_wifi_key">service_wifi</string>
    <string name="pref_service_wifi_default">false</string>
    <string name="pref_service_bluetooth_key">service_bluetooth</string>
    <string name="pref_service_bluetooth_default">false</string>

    <string name="pref_about_version_key">settings_about_version_key</string>
    <string name="prefTitle_about_version_key">Application Version</string>

</resources>
