<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="device_settings"
        android:title="Device settings">

        <EditTextPreference
            android:title="Name"
            android:key="@string/pref_device_name_key"
            android:defaultValue="@string/pref_device_name_default"
            android:inputType="text"
            android:singleLine="true" />

        <ListPreference
            android:title="Communication Channel"
            android:key="@string/pref_device_comm_chan_key"
            android:defaultValue="@string/pref_device_comm_chan_default"
            android:entries="@array/pref_device_comm_chan_entries"
            android:entryValues="@array/pref_device_comm_chan_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="server_settings"
        android:title="Server settings">

        <EditTextPreference
            android:title="Address"
            android:key="@string/pref_server_address_key"
            android:defaultValue="@string/pref_server_address_default"
            android:inputType="text"
            android:singleLine="true" />


        <EditTextPreference
            android:title="Port"
            android:key="@string/pref_server_port_key"
            android:defaultValue="@string/pref_server_port_default"
            android:inputType="number"
            android:singleLine="true" />

        <SwitchPreference
            android:title="Use SSL"
            android:key="@string/pref_server_use_ssl_key"
            android:defaultValue="@string/pref_server_use_ssl_default" />

    </PreferenceCategory>


    <PreferenceCategory
        android:key="mqtt_settings"
        android:title="MQTT Settings">

        <EditTextPreference
            android:title="Address"
            android:key="@string/pref_mqtt_address_key"
            android:defaultValue="@string/pref_mqtt_address_default"
            android:inputType="text"
            android:singleLine="true" />

        <EditTextPreference
            android:title="Port"
            android:key="@string/pref_mqtt_port_key"
            android:defaultValue="@string/pref_mqtt_port_default"
            android:inputType="number"
            android:singleLine="true" />

        <SwitchPreference
            android:title="Use SSL"
            android:key="@string/pref_mqtt_use_ssl_key"
            android:defaultValue="@string/pref_mqtt_use_ssl_default" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="service_settings"
        android:title="Enabled Service">

        <SwitchPreference
            android:title="Brightness"
            android:key="@string/pref_service_brightness_key"
            android:defaultValue="@string/pref_service_brightness_default" />

        <SwitchPreference
            android:title="Accelerometer"
            android:key="@string/pref_service_accelerometer_key"
            android:defaultValue="@string/pref_service_accelerometer_default" />

    </PreferenceCategory>

</PreferenceScreen>
